# group-theory-benchmark

./: .cursorrules  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  formalization.lean  pyproject.toml  references.bib
.claude/: settings.json
examples/: demo_gap_mcp.py  test_mcp_real_problems.py  test_mcp_server.py  test_query_agent.py
formalization/: Formalization.lean  Main.lean  lake-manifest.json  lakefile.toml
formalization/Formalization/: Basic.lean  Green32.lean  Green4.lean  Green44.lean  Green46.lean  Green50.lean  Green57.lean  Green86.lean  KleeK5.lean  Kourovka1_12.lean  Kourovka1_20.lean  Kourovka1_27.lean  Kourovka1_33.lean  Kourovka1_35.lean  Kourovka1_5.lean  Kourovka1_6.lean  Kourovka2_78.lean  Kourovka3_44.lean  Kourovka3_46.lean  Kourovka3_5.lean  Kourovka4_42.lean  Kourovka6_62.lean  Kourovka6_9.lean  Kourovka7_27.lean
lean_scratch/: LeanScratch.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml
make/: ai.mk  complete_migration.py  create_green_dirs.py  docs.mk  extract.mk  extract_mcp_tools.py  find_unformalized.py  find_unsolved.py  fix_duplicate_dirs.py  formalize.mk  formalize_parallel.py  formalize_problem.py  generate_mcp_config.py  generate_problem_prompt.py  generate_readme.py  migrate_legacy_formalization_files.py  migrate_to_kourovka_dirs.py  print_problems.py  tests.mk  tree_with_comments.py  validate_lean_solution.py  watch.mk
problems/15.26/: problem.lean
problems/18.59./: problem.lean
problems/18.87/: disproof.py  notes.txt
tests/: test_gap.py  test_gap_mcp.py  test_lean_mcp.py
(+2485 files in other folders)
